# jax-mps

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  benchmark.py  conftest.py  copilot-instructions.md  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.claude/commands/: fix-issue.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  missing-op.yml
.github/workflows/: awaiting-info.yml  build.yml
benchmarks/: bench_rnn_training.py
examples/gemma/: README.md  benchmark.py  main.py  model.py
examples/gemma3/: main.py  model.py
examples/microbenchmark/: main.py
examples/parakeet/: .gitignore  Makefile  README.md  audio.py  bench_batch.py  benchmark.py  decode.py  fetch_sample.py  main.py  model.py  weights.py
examples/resnet/: README.md  data.py  main.py  model.py
mps_ops/: activation.txt  arithmetic.txt  control_flow.txt  convolution.txt  convolution_transpose.txt  cumulative.txt  depthwise_convolution.txt  fft.txt  gather_scatter.txt  linear_algebra.txt  loss.txt  matrix.txt  matrix_inverse.txt  memory.txt  normalization.txt  one_hot.txt  optimizer.txt  other.txt  pooling.txt  quantization.txt  random.txt  reduction.txt  resize.txt  rnn.txt  shape.txt  sort_topk.txt
python/jax_plugins/mps/: __init__.py
scripts/: _pytest_memory_plugin.py  _pytest_skip_unsupported_plugin.py  _pytest_vendor_modules_plugin.py  bench_async_dispatch.py  bench_resnet_async.py  check_jax_compat.py  memory_monitor.sh  release.sh  run_jax_tests.py  setup_deps.sh  setup_deps_common.sh  setup_deps_llvm.sh  setup_deps_mlx.sh  setup_deps_protobuf.sh  smoke_test_wheel.py
src/jax_plugins/mps/: __init__.py  ops.py  sysinfo.py  util.py
src/mps_backend/: mps_ops.mm
src/pjrt_plugin/: issue_url.h  logging.h  mlir_parser.cc  mlx_buffer.cc  mlx_buffer.h  mlx_buffer.mm  mlx_client.cc  mlx_executable.cc  mlx_executable.h  mlx_executable.mm  mps_buffer.h  mps_buffer.mm  mps_client.h  mps_client.mm  mps_device.h  mps_device.mm  mps_executable.h  mps_executable.mm  pjrt_api.cc  pjrt_buffer.cc  pjrt_client.cc  pjrt_device.cc  pjrt_event.cc  pjrt_executable.cc  pjrt_memory.cc  pjrt_mutex.h  pjrt_profiler.cc  pjrt_profiler.h  pjrt_topology.cc  pjrt_types.h  stablehlo_parser.cc  stablehlo_parser.h  stablehlo_parser.mm  type_utils.h  type_utils.mm
src/pjrt_plugin/ops/: arithmetic.cc  binary_ops.mm  bitwise_ops.mm  collectives.cc  control_flow.cc  control_flow_ops.h  control_flow_ops.mm  convolution_ops.mm  fft_ops.mm  gather_scatter.cc  gather_scatter_utils.h  handler_utils.h  linalg.cc  linalg_ops.mm  metal_kernel_lib.cc  metal_kernel_lib.h  reduction.cc  reduction_ops.mm  registry.h  shape.cc  shape_ops.mm  slice.cc  sort_fft_complex.cc  sort_ops.h  sort_ops.mm  tensor_creation_ops.mm  unary_ops.mm
src/pjrt_plugin/passes/: canonicalize_broadcast_identity.cc  canonicalize_broadcast_identity.h  fuse_bias_add.cc  fuse_bias_add.h  fuse_layer_norm.cc  fuse_layer_norm.h  fuse_rms_norm.cc  fuse_rms_norm.h  fuse_softmax.cc  fuse_softmax.h  mps_fusion_pass.cc  mps_fusion_pass.h  stablehlo_inliner_interface.cc  stablehlo_inliner_interface.h
src/proto/: device_assignment.proto
tests/: conftest.py  test_basic.py  test_benchmark.py  test_control_flow_compile.py  test_eigh_failure_no_abort.py  test_flax.py  test_fusion.py  test_gpu_capture.py  test_memory_stats.py  test_metal_kernel.py  test_ops.py  test_plugin_registration.py  test_rng.py  test_sysinfo.py  test_tensorflow_import_no_segfault.py  test_threefry_lowering.py
tests/configs/: __init__.py  benchmark.py  binary.py  collectives.py  control_flow.py  conv.py  conversion.py  flax.py  fused.py  fusion.py  linalg.py  matmul.py  misc.py  numpyro.py  quantized.py  random.py  reduction.py  shape.py  slice.py  sort.py  unary.py  util.py  zero_sized.py
