[project]
name = "jax-mps"
version = "0.1.0"
description = "JAX backend for Apple Metal Performance Shaders (MPS)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]
keywords = ["jax", "metal", "mps", "apple", "gpu", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/tillahoffmann/jax-mps"
Repository = "https://github.com/tillahoffmann/jax-mps"

[project.entry-points."jax_plugins"]
mps = "jax_plugins.mps"

[build-system]
requires = ["scikit-build-core>=0.8"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Build directory
build-dir = "build/{wheel_tag}"

# CMake configuration
cmake.build-type = "Release"
build.verbose = true

# Install the built library to the package
wheel.packages = ["src/jax_plugins"]
wheel.install-dir = "jax_plugins/mps"

[tool.cibuildwheel]
# Only build for macOS ARM64
build = ["cp310-macosx_arm64", "cp311-macosx_arm64", "cp312-macosx_arm64", "cp313-macosx_arm64"]
skip = ["*-musllinux*", "*-manylinux*", "*win*", "*i686*", "*x86_64*"]

# macOS specific
[tool.cibuildwheel.macos]
archs = ["arm64"]
environment = { CMAKE_PREFIX_PATH = "$HOME/.local/jax-mps-deps" }

# Before building, ensure deps are built
before-all = "./scripts/setup_deps.sh"

[dependency-groups]
dev = [
    "flax>=0.10.7",
    "pre-commit>=4.5.1",
    "pytest",
    "ruff>=0.14.13",
]
